--- a/Leveling_Script.ipynb
+++ b/Leveling_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,56 +10,20 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "#open csv file\n",
-    "df = pd.read_csv('data.csv', encoding = 'unicode_escape')\n",
-    "df"
+    "df = pd.read_csv('data.csv', encoding = 'unicode_escape')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Cleaning: Remove 0 from Duration Columnand replace with '0:00'\n",
-    "df['Duration'] = df['Duration'].replace('0','0:00')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#Cleaning: Convert Duration Column into datetime format\n",
-    "df['Duration'] =  pd.to_datetime(df['Duration'], format='%H:%M').dt.time\n",
-    "#df['Duration'] = df['Duration'].apply(lambda x:dt.datetime.strptime(x,'%H:%M')).dt.time\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Phase 1 Cleaning: \n",
     "\n",
-    "#Cleaning: Remove 0 from Duration Columnand replace with '0:00'\n",
+    "#Converting 'Duration' decimal\n",
     "df['Duration'] = df['Duration'].replace('0','0:00')\n",
-    "\n",
-    "#Cleaning: Convert Duration Column into datetime format\n",
-    "df['Duration'] =  pd.to_datetime(df['Duration'], format='%d%b%Y:%H:%M:%S.%f')\n",
-    "#df['Duration'] = df['Duration'].apply(lambda x:dt.datetime.strptime(x,'%H:%M'))\n",
+    "df['Duration'] = pd.DatetimeIndex(df['Duration']).hour + pd.DatetimeIndex(df['Duration']).minute/60\n",
     "\n",
     "#Cleaning: Remove \"The\" from Institution Column\n",
     "df['Institution'] = df['Institution'].replace('The Johns Hopkins Medical Institutions','Johns Hopkins Medical Institutions')\n",
@@ -109,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -429,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,25 +428,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save df to csv\n",
     "df.to_csv('data_leveled_final.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#figure this out later. \n",
-    "#Recalculate Duration Into Decimal (from hh:mm:ss)\n",
-    "#df = df.set_index(pd.DatetimeIndex(df['Duration']))\n",
-    "#idx = pd.DatetimeIndex(df['Duration'])\n",
-    "#df['Duration_Decimal'] = idx.hour + idx.minute / 60"
    ]
   }
  ],
@@ -502,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
