--- a/CISD/CISD_script.ipynb
+++ b/CISD/CISD_script.ipynb
@@ -2,18 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Jess\n",
+      "Jess\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "from docx import Document\n",
+    "\n",
+    "document_list = []       \n",
+    "\n",
+    "for path, subdirs, files in os.walk('C:/Users/carlb/Desktop/CISD Temporary Repository'): \n",
+    "    for name in files:\n",
+    "        # For each file we find, we need to ensure it is a .docx file before adding\n",
+    "        #  it to our list\n",
+    "        if os.path.splitext(os.path.join(path, name))[1] == \".docx\":\n",
+    "            document_list.append(os.path.join(path, name))\n",
+    "\n",
+    "# Now create a loop that goes over each file path in document_list, replacing your \n",
+    "# hard-coded path with the variable.\n",
+    "for document_path in document_list:\n",
+    "    document = Document(document_path)        # Change the document being loaded each loop\n",
+    "    table = document.tables[0]\n",
+    "    project_cell = table.rows[1].cells[1]\n",
+    "    paragraph = project_cell.paragraphs[0]\n",
+    "    project = paragraph.text\n",
+    "\n",
+    "    print (project)\n",
+    "\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form.docx',\n",
+       " 'C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form_1.docx',\n",
+       " 'C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form_2.docx']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#if word doc in directory open doc\n",
-    "\n",
-    "#extract col 2 to specified excel sheet, in next row that's available\n",
-    "\n",
-    "#Rename word doc with Col 2, Row 2 & Col 2 Row 3 & save\n",
-    "\n",
-    "#Move doc to directory"
-   ]
+   "source": []
   }
  ],
  "metadata": {
