--- a/CISD/CISD_script.ipynb
+++ b/CISD/CISD_script.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Jess\n",
-      "Jess\n"
+      "Carl 02/12/18 02/12/2019 123 21 ·        Affiliation (student, staff, etc): \n",
+      "Carl 02/12/18 02/12/2019 123 21 ·        Affiliation (student, staff, etc): \n",
+      "Carl 02/12/18 02/12/2019 123 21 ·        Affiliation (student, staff, etc): \n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "\n",
     "document_list = []       \n",
     "\n",
-    "for path, subdirs, files in os.walk('C:/Users/carlb/Desktop/CISD Temporary Repository'): \n",
+    "for path, subdirs, files in os.walk(r'C:\\Users\\cbroker1\\Desktop\\work\\CISD\\Temp Dropbox'): \n",
     "    for name in files:\n",
     "        # For each file we find, we need to ensure it is a .docx file before adding\n",
     "        #  it to our list\n",
@@ -34,11 +34,36 @@
     "for document_path in document_list:\n",
     "    document = Document(document_path)        # Change the document being loaded each loop\n",
     "    table = document.tables[0]\n",
-    "    project_cell = table.rows[1].cells[1]\n",
+    "    \n",
+    "    project_cell = table.rows[0].cells[1]\n",
     "    paragraph = project_cell.paragraphs[0]\n",
     "    project = paragraph.text\n",
-    "\n",
-    "    print (project)\n",
+    "    \n",
+    "    project_cell2 = table.rows[1].cells[1]\n",
+    "    paragraph2 = project_cell2.paragraphs[0]\n",
+    "    project2 =paragraph2.text\n",
+    "    \n",
+    "    project_cell3 = table.rows[2].cells[1]\n",
+    "    paragraph3 = project_cell3.paragraphs[0]\n",
+    "    project3 =paragraph3.text\n",
+    "    \n",
+    "    project_cell4 = table.rows[3].cells[1]\n",
+    "    paragraph4 = project_cell4.paragraphs[0]\n",
+    "    project4 =paragraph4.text   \n",
+    "    \n",
+    "    project_cell5 = table.rows[4].cells[1]\n",
+    "    paragraph5 = project_cell5.paragraphs[0]\n",
+    "    project5 =paragraph5.text\n",
+    "    \n",
+    "    project_cell6 = table.rows[5].cells[1]\n",
+    "    paragraph6 = project_cell6.paragraphs[0]\n",
+    "    project6 =paragraph6.text\n",
+    "    \n",
+    "    print (project, project2, project3, project4, project5, project6)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "            \n",
     "            "
@@ -46,24 +71,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form.docx',\n",
-       " 'C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form_1.docx',\n",
-       " 'C:/Users/carlb/Desktop/CISD Temporary Repository\\\\CISD Form_2.docx']"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "document_list"
+    "#project_cell7 = table.rows[6].cells[1]\n",
+    "    #paragraph7 = project_cell7.paragraphs[0]\n",
+    "    #project7 =paragraph7.text\n",
+    "    \n",
+    "    #project_cell8 = table.rows[7].cells[1]\n",
+    "    #paragraph8 = project_cell8.paragraphs[0]\n",
+    "    #project8 =paragraph8.text\n",
+    "    \n",
+    "    #project_cell9 = table.rows[8].cells[1]\n",
+    "    #paragraph9 = project_cell9.paragraphs[0]\n",
+    "    #project9 =paragraph9.text\n",
+    "    \n",
+    "    #project_cell10 = table.rows[9].cells[1]\n",
+    "    #paragraph10 = project_cell10.paragraphs[0]\n",
+    "    #project10 =paragraph10.text\n",
+    "    \n",
+    "    #project_cell11 = table.rows[10].cells[1]\n",
+    "    #paragraph11 = project_cell10.paragraphs[0]\n",
+    "    #project11 =paragraph11.text\n",
+    "    \n",
+    "    #project_cell12 = table.rows[11].cells[1]\n",
+    "    #paragraph12 = project_cell12.paragraphs[0]\n",
+    "    #project12 =paragraph12.text\n",
+    "    \n",
+    "    #project_cell13 = table.rows[12].cells[1]\n",
+    "    #paragraph13 = project_cell13.paragraphs[0]\n",
+    "    #project13 =paragraph13.text\n",
+    "    \n",
+    "    #project_cell14 = table.rows[13].cells[1]\n",
+    "    #paragraph14 = project_cell14.paragraphs[0]\n",
+    "    #project14 =paragraph14.text\n",
+    "    \n",
+    "    #project_cell15 = table.rows[14].cells[1]\n",
+    "    #paragraph15 = project_cell15.paragraphs[0]\n",
+    "    #project15 =paragraph15.text\n",
+    "        \n",
+    "    #project_cell15 = table.rows[15].cells[1]\n",
+    "    #paragraph15 = project_cell15.paragraphs[0]\n",
+    "    #project15 =paragraph15.text"
    ]
   },
   {
@@ -71,7 +121,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import docx\n",
+    "import zipfile\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "document_list = []       \n",
+    "\n",
+    "for path, subdirs, files in os.walk(r'C:\\Users\\cbroker1\\Desktop\\work\\CISD\\Temp Dropbox'): \n",
+    "    for name in files:\n",
+    "        # For each file we find, we need to ensure it is a .docx file before adding\n",
+    "        #  it to our list\n",
+    "        if os.path.splitext(os.path.join(path, name))[1] == \".docx\":\n",
+    "            document_list.append(os.path.join(path, name))\n",
+    "\n",
+    "bestand = docx.Document(doc)\n",
+    "tabellen = bestand.tables\n",
+    "\n",
+    "#get data from all the \"normal\" fields\n",
+    "\n",
+    "alletabellen = []     \n",
+    "for i, tabel in enumerate(tabellen):\n",
+    "    for row in tabellen[i].rows:\n",
+    "        for cell in row.cells:\n",
+    "            for paragraph in cell.paragraphs:\n",
+    "                alletabellen.append(paragraph.text)"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
