--- a/Leveling/Leveling_Script.ipynb
+++ b/Leveling/Leveling_Script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "#open csv file\n",
-    "df = pd.read_csv(r'C:\\Users\\cbroker1\\Desktop\\SCR1.csv', encoding = 'unicode_escape')"
+    "df = pd.read_csv(r'C:\\Users\\carlb\\Desktop\\munged.csv', encoding = 'unicode_escape')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -431,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save df to csv\n",
-    "df.to_csv('data_leveled_final.csv')"
+    "df.to_csv(r'C:\\Users\\carlb\\Desktop\\munged_leveled.csv')"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
