--- a/Leveling/Leveling_SCRs.ipynb
+++ b/Leveling/Leveling_SCRs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,20 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "#open csv file\n",
-    "df = pd.read_csv(r'C:\\Users\\carlb\\Desktop\\munged.csv', encoding = 'unicode_escape')"
+    "df = pd.read_csv(r'C:\\Users\\cbroker1\\Desktop\\CASE1.csv', encoding = 'unicode_escape')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Phase 1 Cleaning: \n",
     "\n",
     "#Converting 'Duration' decimal\n",
-    "df['Duration'] = df['Duration'].replace('0','0:00')\n",
-    "df['Duration'] = pd.DatetimeIndex(df['Duration']).hour + pd.DatetimeIndex(df['Duration']).minute/60\n",
+    "#df['Duration'] = df['Duration'].replace('0','0:00')\n",
+    "#df['Duration'] = pd.DatetimeIndex(df['Duration']).hour + pd.DatetimeIndex(df['Duration']).minute/60\n",
     "\n",
     "#Cleaning: Remove \"The\" from Institution Column\n",
     "df['Institution'] = df['Institution'].replace('The Johns Hopkins Medical Institutions','Johns Hopkins Medical Institutions')\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -212,71 +212,71 @@
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "               (df['Job Title'] == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "               (df['Job Title'] == 'Postdoc')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_3'] = 'SOM Postdoc'\n",
+    "               (df['Job Title'] == 'Postdoc')], 'Level_3'] = 'SOM Postdoc'\n",
     "\n",
     "#Leveling: FASAP JHU Library Postdoc\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Libraries') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Libraries') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Libraries') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_3'] = 'Libaries Postdoc'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_3'] = 'Libaries Postdoc'\n",
     "\n",
     "#Leveling: FASAP JHU KSAS Postdoc\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_3'] = 'KSAS Postdoc'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_3'] = 'KSAS Postdoc'\n",
     "\n",
     "#Leveling: FASAP JHU WSOE Postdoc\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Whiting School of Engineering') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Whiting School of Engineering') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_2'] = 'JHU'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Whiting School of Engineering') &\n",
-    "               (df.Title == 'Postdoc')], 'Level_3'] = 'WSOE Postdoc'\n",
+    "               (df['Title'] == 'Postdoc')], 'Level_3'] = 'WSOE Postdoc'\n",
     "\n",
     "#Leveling: FASAP JHU SOM Housestaff\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Staff') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'SOM Housestaff')], 'Level_1'] = 'FASAP'\n",
+    "               (df['Title'] == 'SOM Housestaff')], 'Level_1'] = 'FASAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Staff') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'SOM Housestaff')], 'Level_2'] = 'JHU'\n",
+    "               (df['Title'] == 'SOM Housestaff')], 'Level_2'] = 'JHU'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Staff') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'SOM Housestaff')], 'Level_3'] = 'SOM Housestaff'\n",
+    "               (df['Title'] == 'SOM Housestaff')], 'Level_3'] = 'SOM Housestaff'\n",
     "\n",
     "#Leveling: JHSAP BSPH\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
@@ -325,29 +325,29 @@
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Medical student')], 'Level_1'] = 'JHSAP'\n",
+    "               (df['Title'] == 'Medical student')], 'Level_1'] = 'JHSAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Medical student')], 'Level_2'] = 'SOM'\n",
+    "               (df['Title'] == 'Medical student')], 'Level_2'] = 'SOM'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Medical student')], 'Level_3'] = 'Medical Student'\n",
+    "               (df['Title'] == 'Medical student')], 'Level_3'] = 'Medical Student'\n",
     "\n",
     "#Leveling: JHSAP SOM Graduate student\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Graduate student')], 'Level_1'] = 'JHSAP'\n",
+    "               (df['Title'] == 'Graduate student')], 'Level_1'] = 'JHSAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Graduate student')], 'Level_2'] = 'SOM'\n",
+    "               (df['Title'] == 'Graduate student')], 'Level_2'] = 'SOM'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'School of Medicine') &\n",
-    "               (df.Title == 'Graduate student')], 'Level_3'] = 'Graduate Student'\n",
+    "               (df['Title'] == 'Graduate student')], 'Level_3'] = 'Graduate Student'\n",
     "\n",
     "#Leveling: JHSAP SON\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
@@ -369,21 +369,21 @@
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Engineering and Applied Science Programs for Professionals') &\n",
-    "               (df.Title == 'PE GR Graduate')], 'Level_1'] = 'JHSAP'\n",
+    "               (df['Title'] == 'PE GR Graduate')], 'Level_1'] = 'JHSAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Engineering and Applied Science Programs for Professionals') &\n",
-    "               (df.Title == 'PE GR Graduate')], 'Level_2'] = 'EP'\n",
+    "               (df['Title'] == 'PE GR Graduate')], 'Level_2'] = 'EP'\n",
     "\n",
     "#Leveling: JHSAP KSAS\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
-    "               (df.Title == 'AE GR Graduate')], 'Level_1'] = 'JHSAP'\n",
+    "               (df['Title'] == 'AE GR Graduate')], 'Level_1'] = 'JHSAP'\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') &\n",
     "               (df.Affiliation == 'Student') & \n",
     "               (df.Division == 'Krieger School of Arts and Sciences') &\n",
-    "               (df.Title == 'AE GR Graduate')], 'Level_2'] = 'KSAS'\n",
+    "               (df['Title'] == 'AE GR Graduate')], 'Level_2'] = 'KSAS'\n",
     "\n",
     "#Leveling: JHSAP General\n",
     "df.at[df.index[(df.Institution == 'Johns Hopkins University') & \n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save df to csv\n",
-    "df.to_csv(r'C:\\Users\\carlb\\Desktop\\munged_leveled.csv')"
+    "df.to_csv(r'C:\\Users\\cbroker1\\Desktop\\CASE1_leveled.csv')"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
